<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:background="#A3EDC063"
    tools:context=".aboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="22dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:text="@string/developer1"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/developerId1"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/developerEmail1"
        android:textAlignment="center"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/developer2"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/developerId2"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/developerEmail2"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_height="wrap_content"
        android:text="@string/githublink"
        android:autoLink="web"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dip"
        android:linksClickable="true"></TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/github"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/copyright"
        android:textSize="14sp" />

</RelativeLayout>