<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E2F1AB43"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A3EDC063"
        android:orientation="vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="108dip"
            android:layout_marginTop="64dip"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dip"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnKeep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dip"
            android:backgroundTint="#E2F1AB43"
            android:text="Keep"
            android:textAlignment="center"
            android:textColor="#0C0C0C" />

        <Button
            android:id="@+id/btnWear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E2F1AB43"
            android:text="Wear"
            android:textColor="#0C0C0C" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="50dip"
            android:layout_marginRight="16dip"
            android:text="@string/copyright"
            android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>